# npp

./: -  .gitignore  AGENTS.md  API  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakeLists_old.txt  GAMMA_REVERSE_ENGINEERING_QUICK_REF.md  Makefile  NETWORK_SETUP.md  NVIDIA_GAMMA_REVERSE_ENGINEERING.md  NVIDIA_NPP_BEHAVIOR_ANALYSIS.md  QUICK_START.md  README.md  README_TEST.md  advanced_style_cleanup.sh  analyze_alphacomp  analyze_alphacomp.cpp  analyze_gamma_lut.py  analyze_missing_apis.py  analyze_npp_headers.py  analyze_nvidia_alphapremul  analyze_nvidia_alphapremul.cpp  batch_restore_spacing.sh  benchmark_copy_planar  benchmark_copy_planar.cpp  build.sh  build_maca.sh  build_nvidia.sh  cleanup_code_style.sh  compile_extract_lut.sh  compile_test_ac4.sh  debug_all_ops.cpp  debug_alphacomp.cpp  debug_nvidia_16u  debug_nvidia_16u.cu  debug_nvidia_alphapremul  debug_nvidia_alphapremul.cpp  debug_specific_cases  (+42 more)
benchmark/: CMakeLists.txt  FRAMEWORK.md  README.md  benchmark_base.h  benchmark_main.cpp  benchmark_results_20260316_185904.csv  benchmark_runner.cpp  benchmark_utils.cu
benchmark/nppcore/: bench_core.cpp
benchmark/nppi/: bench_addc.cpp  bench_arithmetic.cpp  bench_color.cpp  bench_color_conversion.cpp  bench_compare.cpp  bench_data_exchange.cpp  bench_filter.cpp  bench_geometry.cpp  bench_gradient.cpp  bench_morphology.cpp  bench_statistics.cpp  bench_threshold.cpp
benchmark/npps/: bench_arithmetic.cpp  bench_conversion.cpp  bench_filtering.cpp  bench_initialization.cpp  bench_signal.cpp  bench_statistics.cpp
benchmark/scripts/: build_benchmark.sh  compare_csv.py  new_benchmark.sh  progress_report.py  run_benchmark.sh
examples/cuda-npp-samples/: CMakeLists.txt  README.md  VERIFICATION_REPORT.md  build.sh  compare_results.sh  run_tests.sh  verify_results.cpp
examples/cuda-npp-samples/mpp_results/: teapot512_cannyEdgeDetection.pgm
examples/cuda-npp-samples/opennpp_results/: teapot512_histEqualization.pgm
src/: CMakeLists.txt  npp_internal.h  npp_version_compat.h  test_warning_temp.cpp
src/include/: npp_image_arithmetic.h  npp_version_compat.h  nppi_memory_allocator.h
src/modules/: npp_image_arithmetic_cpu.cpp  npp_image_arithmetic_cuda.cu
src/nppcore/: logger.cu  logger.h  nppcore.cpp  nppcore_unimplemented.cpp
src/nppi/: nppi_support_functions.cpp  nppi_support_functions_simple.cpp
src/nppi/nppi_arithmetic_operations/: REFACTOR_SUMMARY.md  UNIFIED_FRAMEWORK_SUMMARY.md  nppi_abs.cpp  nppi_abs.cu  nppi_abs_new.cu  nppi_absdiff.cpp  nppi_absdiff.cu  nppi_absdiffc.cu  nppi_add.cpp  nppi_add.cu  nppi_add_new.cu  nppi_addc.cpp  nppi_addc.cu  nppi_addc_reference.cpp  nppi_adddevicec.cu  nppi_addproduct.cu  nppi_addsquare.cu  nppi_addweighted.cu  nppi_alphacomp.cu  nppi_alphacompc.cu  nppi_alphapremul.cu  nppi_and.cpp  nppi_and.cu  nppi_andc.cu  nppi_arctan.cpp  nppi_arctan.cu  nppi_arithmetic_api.h  nppi_arithmetic_common.h  nppi_arithmetic_executor.h  nppi_arithmetic_ops.h  nppi_arithmetic_reference.cpp  nppi_arithmetic_reference.h  nppi_arithmetic_unified.h  nppi_comparec.cpp  nppi_comparec.cu  nppi_devicec.cu  nppi_devicec_simple.cu  nppi_div.cpp  nppi_div.cu  nppi_divc.cpp  (+35 more)
src/nppi/nppi_color_conversion_operations/: nppi_cfa_to_rgb.cpp  nppi_cfa_to_rgb.cu  nppi_color_conversion_missing.cpp  nppi_color_conversion_validation.hpp  nppi_color_to_gray.cpp  nppi_color_to_gray.cu  nppi_color_twist.cpp  nppi_color_twist.cu  nppi_gamma.cpp  nppi_gamma.cu  nppi_gradient_color_to_gray.cpp  nppi_gradient_color_to_gray.cu  nppi_lab.cpp  nppi_lab.cu  nppi_lut.cpp  nppi_lut.cu  nppi_lut_linear.cpp  nppi_nv12_rgb.cpp  nppi_nv12_rgb.cu  nppi_nv12_yuv420.cpp  nppi_nv12_yuv420.cu  nppi_rgb_gray.cpp  nppi_rgb_gray.cu  nppi_rgb_hls.cpp  nppi_rgb_hls.cu  nppi_rgb_hsv.cpp  nppi_rgb_hsv.cu  nppi_rgb_yuv.cpp  nppi_rgb_yuv.cu  nppi_rgb_yuv420.cpp  nppi_rgb_yuv420.cu  nppi_rgb_yuv422.cpp  nppi_rgb_yuv422.cu  nppi_ycbcr411.cpp  nppi_ycbcr411.cu  nppi_ycbcr420_layout.cpp  nppi_ycbcr420_layout.cu  nppi_ycbcr420_rgb.cpp  nppi_ycbcr420_rgb.cu  nppi_ycbcr422_rgb.cpp  (+5 more)
src/nppi/nppi_data_exchange_and_initialization/: nppi_compressLabels.cpp  nppi_compressLabels.cu  nppi_convert.cpp  nppi_convert.cu  nppi_copy.cpp  nppi_copy.cu  nppi_copyConstBorder.cpp  nppi_copyConstBorder.cu  (+8 more)
src/npps/: npps_support_functions.cpp
test/: CMakeLists.txt  DIRECTORY_STRUCTURE.md  README.md  TEST_REORGANIZATION_PLAN.md  npp_test_runner.cpp  test_addC_direct.cpp  test_arithmetic_comprehensive.cpp  test_comprehensive_arithmetic.cpp  test_comprehensive_arithmetic_nppi.cpp  test_framework_debug.cpp  test_multichannel_arithmetic.cpp  test_nppi_addc_8u_c1rsfs.cpp  test_nppi_addc_8u_c1rsfs_validation.cpp  test_runner.cpp  test_simple_divc.cpp  test_simple_framework.cpp  test_simple_mulc.cpp  test_simple_subc.cpp  test_simple_validation.cpp  test_step_by_step.cpp  test_three_way_validation.cpp  test_three_way_validation_v2.cpp  verify_dual_lib.cpp
test/benchmark/: BENCHMARK_TEMPLATE.cpp  CMakeLists.txt  EXPANSION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_CHECKLIST.md  QUICK_START.md  README.md  batch_generate_benchmarks.py  compare_results.py  generate_benchmark.py  run_comparison.sh  run_nvidia_only.sh  run_performance_test.sh
test/common/: npp_test_utils.h
test/comparison/: CMakeLists.txt
test/framework/: dual_library_test_base.h  npp_image_buffer.h  npp_test_common.h  npp_test_core.h  npp_test_framework.h  npp_validation_test.h  npp_validation_test_v2.h  nppi_arithmetic_test.h  nvidia_comparison_test_base.h  nvidia_npp_loader.h  test_nppi_addc_8u_c1rsfs.h  test_report.h  test_report_simple.h
test/functional/: CMakeLists.txt  debug_test.cpp  simple_debug.cpp
test/nppcore/: test_nppcore.cpp
test/nppi/: test_nppi_support_functions.cpp
test/nppi_arithmetic/: test_nppi_addc.cpp  test_nppi_addc.h
test/tools/: test_summary.py
test/unit/: CMakeLists.txt
test/validation/: CONSISTENCY_DESIGN.md  test_nppcore_validation.cpp  test_nppi_arithmetic_simple.cpp  test_nppi_arithmetic_validation.cpp  test_nppi_support_validation.cpp
test_external_example/: CMakeLists.txt  test_install.cpp
(+803 files in other folders)
